--- a/src/assets/scss/_record.scss
+++ b/src/assets/scss/_record.scss
@@ -199,10 +199,6 @@
 
     /******Related Entities in record **************/
 
-    .row-focus {
-      border: map.get(variables.$record-spacing-map, 'row-focus-border-width') solid map.get(variables.$color-map, 'primary') !important;
-    }
-
     .chaise-table-header {
       padding-bottom: 5px;
     }
